Fix the bug of z-index

--- a/assets/styles/custom/sidebar.scss
+++ b/assets/styles/custom/sidebar.scss
@@ -4,7 +4,7 @@
   top: 0;
   bottom: 0;
   overflow-x: hidden;
-  z-index: 1000;
+  z-index: 2000;
   transition: width 0.5s; /* 0.5 second transition effect to slide in the sidenav */
   background: $sidebar-backgroundColor;
   box-shadow: $sidebar-shadow;
